[tool.poetry]
name = "steward-fastapi"
version = "0.1.0"
description = ""
authors = ["AulonSal <aulonsal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = "^0.13.3"
asyncpg = "^0.22.0"
aerich = {path = "dist/aerich-0.5.1.tar.gz"}
tortoise-orm = "^0.16.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.20.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
