[tool.poetry]
name = "steward-fastapi"
version = "0.1.0"
description = ""
authors = ["AulonSal <aulonsal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = "^0.13.3"
asyncpg = "^0.22.0"
tortoise-orm = {git = "https://github.com/tortoise/tortoise-orm.git"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aerich = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.20.0"
asynctest = "^0.13.0"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
